--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,4 +1,58 @@
-# Logs
+###############################################
+# Root consolidated .gitignore for repository #
+# Covers frontend + server workspaces         #
+###############################################
+
+### Environment & secrets (never commit) ###
+.env
+.env.*
+!.env.example
+*.env.local
+*.env.development.local
+*.env.test.local
+*.env.production.local
+server/.env
+server/.env.*
+frontend/.env
+frontend/.env.*
+firebase-admin-sdk.json
+google-drive-credentials.json
+server/firebase-admin-sdk.json
+server/google-drive-credentials.json
+
+### Dependency directories ###
+node_modules/
+**/node_modules/
+jspm_packages/
+
+### Build & output ###
+dist/
+dist-ssr/
+build/
+frontend/dist/
+server/dist/
+.next/
+.nuxt/
+.vuepress/dist/
+.serverless/
+
+### Caches & temp ###
+.parcel-cache
+.cache
+.npm
+.eslintcache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+.fusebox/
+.dynamodb/
+.nyc_output
+coverage/
+*.lcov
+*.tgz
+
+### Logs ###
 logs
 *.log
 npm-debug.log*
@@ -6,19 +60,41 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
+firebase-debug.log*
+firebase-debug.*.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
+### System / IDE ###
 .vscode/*
 !.vscode/extensions.json
-.idea
+.vscode-test
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+### Misc runtime ###
+pids
+*.pid
+*.pid.lock
+*.seed
+.node_repl_history
+.lock-wscript
+build/Release
+typings/
+*.p12
+*.pem
+*.key
+.tern-port
+
+### Project specific ###
+.firebase/
+gcloud-config/
+
+# End of consolidated ignore file
