--- a/client/package.json
+++ b/client/package.json
@@ -28,14 +28,17 @@
     "lord-icon-element": "^4.1.2",
     "lottie-web": "^5.13.0",
     "lucide-react": "^0.554.0",
+    "material-icons": "^1.13.14",
     "motion": "^12.23.24",
     "multer": "^2.0.2",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
     "react-loading-skeleton": "^3.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.9.6",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
